--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# postgres - docker
+data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -103,6 +106,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
