--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+asgiref==3.6.0
 Django==4.1.6
-psycopg2==2.9.5
 flake8==5.0.4
+Markdown==3.4.1
+mccabe==0.7.0
+psycopg2==2.9.5
+pycodestyle==2.9.1
+pyflakes==2.5.0
+PyJWT==2.6.0
+django-filter==22.1
+sqlparse==0.4.3
+djangorestframework==3.14.0
